	* Prefix internal efreet cache keys with __
	* Create one cache file for each theme
	* Before doing strcmp, check if pointers are equal. They might be
	  because of mmap and stringshare.
	* Add local icon cache, so we wont hit the cache file for each icon
	  to be retrieved

2011-02-03  Sebastian Dransfeld

        * Fix leak in efreet_mime_type_icon_get()

2011-02-05  Sebastian Dransfeld

        * Remove global log domain and make all files define log domain
          before including efreet_private.h
        * Remove efreet_xml_{init,shutdown}() from efreet_menu.c, it is done
          in efreet_init()
        * Set EFREET_MODULE_LOG_DOM variable to -1 after unregister
        * Remove duplicate logging macros

2011-02-05  Hannes Janetzek

        * Clear mem cache when closing eet file

2011-02-06  Sebastian Dransfeld

        * Fix doc for efreet_utils.{h,c},efreet_mime.c
        * Add comment for all internal EAPI functions
        * Remove doc for removed _efreet_log_domain_global

2011-02-07  Sebastian Dransfeld

	* Don't create cache dir several times
	* Do efreet_init before using efreet_*() functions
	* Move lock creation to own function for desktop cache
	* Set file owner to calling user

2011-02-09  Sebastian Dransfeld

	* Move theme hash from efreet_icon.c to efreet_cache.c
	* Don't free data returned by efreet_util_cache_names
	* Add free callback to eet hashes
	* Remove unneeded header
	* Check if pattern equals "*" before doing pattern match
	* Remove EAPI from efreet_home_dir_get
	* Make efreet_cache_icon_theme_free only used in efreet_cache.c static
	* Move struct only used for cache to efreet_cache_private.h

2011-02-10  Sebastian Dransfeld

	* Move all eet cache handling to efreet_cache.c
	* Free hashes on init error
	* efreet_cache_icon -> efreet_icon for functions in efreet_icon.c
	* Fix memleak in desktop cache create
	* Pass dirs to desktop cache process as arguments
	* Delay cache recreation with a timer